cache-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.16.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: cache
  name: cache
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: cache
    spec:
      containers:
      - args:
        - redis-server
        - --appendonly
        - "yes"
        image: redis:4-alpine
        name: cache
        resources:
          requests:
            cpu: 10m
        volumeMounts:
        - mountPath: /data
          name: docker-redis-data
      restartPolicy: Always
      volumes:
      - name: docker-redis-data
        emptyDir: {}
status: {}
