database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.16.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: database
    spec:
      containers:
      - image: "postgres:10-alpine"
        name: postgres
        ports:
        - containerPort: 5432
          name: postgres
        resources:
          requests:
            cpu: 10m
        volumeMounts:
        - name: docker-postgres-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: docker-postgres-data
        persistentVolumeClaim:
          claimName: docker-postgres-data

status: {}
