testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: task-pv-pod
spec:
  volumes:
    - name: docker-weblate-data
      persistentVolumeClaim:
        claimName: docker-weblate-data
    - name: weblate-data
      persistentVolumeClaim:
        claimName: weblate-data
  containers:
    - name: task-pv-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: /home
          name: docker-weblate-data          
        - mountPath: /media
          name: weblate-data
