weblate-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.16.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: weblate
  name: weblate
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: weblate
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: weblate
    spec:
      containers:
      - env:
        - name: POSTGRES_HOST
          value: database
        - name: POSTGRES_DATABASE
          value: weblate
        - name: POSTGRES_PORT
          value: "5432"
        - name: POSTGRES_PASSWORD
          value: ~
        - name: POSTGRES_USER
          value: weblate
        - name: REDIS_HOST
          value: cache
        - name: REDIS_PORT
          value: "6379"
        - name: "WEBLATE_ADMIN_EMAIL"
          valueFrom:
            secretKeyRef:
              name: admin
              key: EMAIL
        - name: "WEBLATE_ADMIN_NAME"
          valueFrom:
            secretKeyRef:
              name: admin
              key: NAME
        - name: "WEBLATE_ADMIN_PASSWORD"
          valueFrom:
            secretKeyRef:
              name: admin
              key: PASSWORD
        - name: WEBLATE_EMAIL_HOST
          valueFrom:
            secretKeyRef:
              name: email
              key: WEBLATE_EMAIL_HOST
        - name: WEBLATE_EMAIL_PORT
          valueFrom:
            secretKeyRef:
              name: email
              key: WEBLATE_EMAIL_PORT
        - name: WEBLATE_EMAIL_PASSWORD
          valueFrom:
            secretKeyRef:
              name: email
              key: WEBLATE_EMAIL_PASSWORD
        - name: WEBLATE_EMAIL_USER
          valueFrom:
            secretKeyRef:
              name: email
              key: WEBLATE_EMAIL_USER
        - name: WEBLATE_SERVER_EMAIL
          valueFrom:
            secretKeyRef:
              name: email
              key: WEBLATE_SERVER_EMAIL
        - name: WEBLATE_DEFAULT_FROM_EMAIL
          valueFrom:
            secretKeyRef:
              name: email
              key: WEBLATE_DEFAULT_FROM_EMAIL
        image: gcr.io/api-project-583924127000/weblate
        name: weblate
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: "1Gi"
        volumeMounts:
        - mountPath: /app/data
          name: docker-weblate-data
      restartPolicy: Always
      volumes:
      - name: docker-weblate-data
        persistentVolumeClaim:
          claimName: docker-weblate-data
status: {}
