cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.5.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: cache
  name: cache
spec:
  clusterIP: None
  ports:
  - name: headless
    port: 55555
    targetPort: 0
  selector:
    io.kompose.service: cache
status:
  loadBalancer: {}
