database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  ports:
  - port: 5432
  selector:
    io.kompose.service: database
