weblate-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: weblate
  name: weblatesvc
spec:
  ports:
  - name: "http"
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    io.kompose.service: weblate
  type: NodePort
