weblate-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weblate
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
spec:
  backend:
    serviceName: weblate
    servicePort: 80
